Change menu settings and general layout
* Navbar links to separate pages
* Navbar colors
* Custom scss for titles widgets
* custom layout widgets to put "see all ..." on the left

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
+# R auxiliary files
 .Rproj.user
 .Rhistory
 .RData
 .Ruserdata
 Psicostat_Website.code-workspace
+
+# Hugo auxiliary folders
+/public
+/node_modules
+/resources
+
+# mac auxiliary files
+*.DS_store
+
