Add Current Project section
* remove Experience section
* add Current Projects section
* Redefine template with image
* Add Pricostat-Template example project
* Set permalinks different between posts and projects
* Set .Rprofile option to create page boundles (https://bookdown.org/yihui/blogdown/more-global-options.html)

--- a/config.toml
+++ b/config.toml
@@ -69,3 +69,11 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
   category = "categories"
   publication_type = "publication_types"
   author = "authors"
+  
+  
+# Permalinks according to the kind of content
+[permalinks]
+  post = "/:year/:month/:day/:slug/"
+  project = "/:slug/"
+  
+  
