--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -13,13 +13,13 @@
   url = "publication/"
   weight = 20
 
-[[main]]
-  name = "Posters"
-  url = "poster/"
-  weight = 30
+# [[main]]
+#  name = "Posters"
+#  url = "poster/"
+#  weight = 30
 
 [[main]]
-  name = "Talks"
+  name = "Talks & Posters"
   url = "talk/"
   weight = 40
 
@@ -29,18 +29,18 @@
   weight = 50
 
 [[main]]
-  name = "Contact"
-  url = "#contact"
+  name = "Psicostat"
+  url = "psicostat/"
   weight = 60
 
 [[main]]
-  name = "Psicostat"
-  url = "psicostat/"
-  weight = 80
+  name = "Contact"
+  url = "#contact"
+  weight = 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 [[main]]
     name = "CV"
     url = "files/cv.pdf"
-    weight = 70
+    weight = 80
