Add filter in Talk and Poster page
* Add talk_poster_type to taxonomy
* Define pub_talk and pub_poster in language i18n/en.yaml
* Add talk_poster_types in talk_poster archetypes
* Define labels for talk_poster_types taxonomy labels in data/
* Define the get_talk_poster function
* Change the section/talk_poster.html to add filter as in the publication page

--- a/config.toml
+++ b/config.toml
@@ -68,6 +68,7 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
   tag = "tags"
   category = "categories"
   publication_type = "publication_types"
+  talk_poster_type = "talk_poster_types"
   author = "authors"
   
   
