--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,43 +4,48 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
+  name = "Projects & Interests"
+  url = "project/"
+  weight = 10
+  
+[[main]]
   name = "Posts"
   url = "post/"
-  weight = 10
+  weight = 20
 
 [[main]]
   name = "Publications"
   url = "publication/"
-  weight = 20
+  weight = 30
 
 # [[main]]
 #  name = "Posters"
 #  url = "poster/"
-#  weight = 30
+#  weight = 40
 
 [[main]]
   name = "Talks & Posters"
   url = "talk_poster/"
-  weight = 40
+  weight = 50
 
 [[main]]
   name = "Teaching"
   url = "teaching/"
-  weight = 50
+  weight = 60
 
 [[main]]
   name = "Psicostat"
   url = "psicostat/"
-  weight = 60
+  weight = 70
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 70
+  weight = 80
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 [[main]]
     name = "CV"
     url = "files/cv.pdf"
-    weight = 80
+    weight = 90
